--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -6,17 +6,14 @@ env:
 jobs:
   lint:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.8", "3.9", "3.10"]
     steps:
     - uses: actions/checkout@v3
-    - name: Setup Python ${{ matrix.python-version }}
+    - name: Setup Python environement
       uses: actions/setup-python@v3
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
+         # pip install pylint
     - name: GitHub Action for pylint
       # You may pin to the exact commit or the version.
       # uses: cclauss/GitHub-Action-for-pylint@8ef4d22e119fb1cdc0f58f2e95cb1f8d8b0d55e6
