--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,3 +18,10 @@ jobs:
       # You may pin to the exact commit or the version.
       # uses: cclauss/GitHub-Action-for-pylint@8ef4d22e119fb1cdc0f58f2e95cb1f8d8b0d55e6
       uses: cclauss/GitHub-Action-for-pylint@0.7.0
+    - name: Lint code
+      run: |
+        pylint --disable=C0301 --disable=C0326 *.py
+    - name: Run unit tests
+      run: |
+        python -m unittest --verbose --failfast
+        
