--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,13 +14,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
          # pip install pylint
-    - name: GitHub Action for pylint
-      # You may pin to the exact commit or the version.
-      # uses: cclauss/GitHub-Action-for-pylint@8ef4d22e119fb1cdc0f58f2e95cb1f8d8b0d55e6
-      uses: cclauss/GitHub-Action-for-pylint@0.7.0
-    - name: Lint code
-      run: |
-        pylint --disable=C0301 --disable=C0326 *.py
+    - name: pylint-and-format
+        # You may pin to the exact commit or the version.
+        # uses: itsvinayak/pylint-and-format@0a73b8e4fe81fd0ff59de0697a0b370ad989c462
+      uses: itsvinayak/pylint-and-format@v1.1
+      with:
+        # filename
+       filename: app.py
     - name: Run unit tests
       run: |
         python -m unittest --verbose --failfast
