--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,4 +12,6 @@ jobs:
       uses: actions/setup-python@v3
     - name: Install requirement 
       run: pip install --quiet --requirement requirements.txt
-    
+    - name: Run unit tests
+      run: |
+        python -m unittest --verbose --failfast
