--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,9 +13,7 @@ jobs:
     - name: Install requirement 
       run: pip install --quiet --requirement requirements.txt
     - name: Lint code
-      run: |
-        flake8 --ignore=E501,E231 *.py
-        pylint --disable=C0301  *.py
+      run:  pylint --disable=C0301  *.py
     - name: Run unit tests
       run: |
         python -m unittest --verbose --failfast
