--- a/.github/workflows/challengeTwo.yml
+++ b/.github/workflows/challengeTwo.yml
@@ -5,7 +5,7 @@ env:
   ARTIFACT_NAME: app
 jobs:
   main:
-    runs-on: ubuntu-lates
+    runs-on: ubuntu-latest
     steps:
       - name : checkout
         uses : actions/checkout@v3
