--- a/.github/workflows/challengeTwo.yml
+++ b/.github/workflows/challengeTwo.yml
@@ -10,5 +10,8 @@ jobs:
       - name : checkout
         uses : actions/checkout@v3
       - name : upload artifact
-        uses : actions/upload-artifact@v3  
+        uses : actions/upload-artifact@v3
+        with :
+          name : ${{ env.APPLICATION_NAME }}
+          path : .
        
