--- a/.github/workflows/challengeTwo.yml
+++ b/.github/workflows/challengeTwo.yml
@@ -14,7 +14,14 @@ jobs:
         with :
           name : ${{ env.ARTIFACT_NAME }}
           path : .   
+  use:
+    runs-on: ubuntu-latest
+    needs : [main]
+    steps:
+      - name : checkout
+        uses : actions/checkout@v3
       - name : Download a Build Artifact
         uses : actions/download-artifact@v2.1.1
         with :
           name : ${{ env.ARTIFACT_NAME }}
+
